shape of the cards has been modified.

--- a/index.html
+++ b/index.html
@@ -100,23 +100,7 @@
       </div>
 
       <!-- Table to display products -->
-      <div class="Product">
-        <div class="card d-flex align-items-center" style="width: 18rem">
-          <img
-            src="css/operational-system.png"
-            class="card-img-top w-50"
-            alt="..."
-          />
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
-            </p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
-        </div>
-      </div>
+      <div id="Product" class="Product row px-2"></div>
     </div>
 
     <script src="js/bootstrap.bundle.min.js"></script>
